stage0/tests/snapshots/diagnostic__tests_fixtures_diagnostics_types_generic_record_constructor_binding_mismatch.snap
---
source: tests/fixtures.rs
expression: transcript
---
fixture: tests/fixtures/diagnostics/types/generic_record_constructor_binding_mismatch.ml

compile:
status: failure(1)
stdout:
<empty>
stderr:
Error: stage0::source

  × function argument type does not match
   ╭─[tests/fixtures/diagnostics/types/generic_record_constructor_binding_mismatch.ml:6:29]
 5 │   let label = match item {
 6 │     box { value: value } -> string_concat(value, "")
   ·                             ────────────┬───────────
   ·                                         ╰── this call requires `String`, but the argument provides `i64`
 7 │   };
   ╰────
  help: pass an argument with the parameter type expected by the function
